Add CurseForge support